# tradingview-chart

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_zh-TW.md  CLAUDE.md  INSTALLATION.md  README.md  README_zh-TW.md  docker-compose-demo.yaml  pyproject.toml  pyproject_backup.toml  pyproject_old.toml  requirements.txt  run.py  run.sh  setup.py  setup.sh
.github/workflows/: ci.yml  release-core.yml
docs/zh-tw/: README.md
examples/: README.md  configuration_example.py  custom_provider.py  event_system_example.py  trace_id_example.py
scripts/: detect-modules.sh  test-engine.sh
src/: abstract_data_provider.py  config.py  crypto_price_provider.py  crypto_provider.py  data_analyzer.py  data_models.py  enhanced_crypto_provider.py  enhanced_main.py  influx-connector.py  kafka_manager.py  main.py  test_main.http
src/asset_core/: README.md  __init__.py  pyproject.toml  pytest.ini  test_runner.py
src/asset_core/asset_core/: __init__.py
src/asset_core/asset_core/config/: base.py  network.py  observability.py  storage.py
src/asset_core/asset_core/events/: __init__.py  bus.py
src/asset_core/asset_core/exceptions/: __init__.py  core.py
src/asset_core/asset_core/models/: events.py  kline.py  trade.py  validators.py
src/asset_core/asset_core/network/: __init__.py  ws_client.py
src/asset_core/asset_core/observability/: __init__.py  logging.py  metrics.py  trace_id.py
src/asset_core/asset_core/patterns/: __init__.py  backpressure.py  rate_limiter.py
src/asset_core/asset_core/providers/: __init__.py  base.py
src/asset_core/asset_core/storage/: __init__.py  kline_repo.py  metadata_repo.py
src/asset_core/asset_core/types/: __init__.py  common.py
src/asset_core/config/: __init__.py  base.py  network.py  observability.py  storage.py
src/asset_core/events/: __init__.py  bus.py
src/asset_core/exceptions/: __init__.py  core.py
src/asset_core/models/: __init__.py  events.py  kline.py  trade.py  validators.py
src/asset_core/network/: __init__.py  ws_client.py
src/asset_core/observability/: __init__.py  logging.py  metrics.py  trace_id.py
src/asset_core/patterns/: __init__.py  backpressure.py  rate_limiter.py
src/asset_core/providers/: __init__.py  base.py
src/asset_core/storage/: __init__.py  kline_repo.py  metadata_repo.py
src/asset_core/tests/: __init__.py  conftest.py
src/asset_core/tests/contracts/: __init__.py  base_contract_test.py  test_config_edge_cases.py  test_config_hierarchy.py  test_data_provider_contract.py  test_event_bus_contract.py  test_kline_repo_contract.py  test_metadata_repo_contract.py  test_observability_components.py  test_storage_advanced.py
src/asset_core/tests/e2e/: test_data_flow_integration.py  test_system_resilience.py
src/asset_core/tests/integration/network/: test_ws_client.py  test_ws_client_simple.py
src/asset_core/tests/integration/observability/: test_logging_enhanced.py
src/asset_core/tests/performance/: __init__.py  test_concurrency_performance.py  test_model_performance.py
src/asset_core/tests/security/: test_sensitive_data_handling.py
src/asset_core/tests/units/: test_config.py  test_events.py  test_exceptions.py  test_exceptions_enhanced.py  test_models.py  test_models_comprehensive.py  test_providers.py
src/asset_core/tests/units/config/: test_base.py  test_network.py  test_observability.py  test_storage.py
src/asset_core/tests/units/models/: test_events.py  test_kline.py  test_models_property_based.py  test_trade.py
src/asset_core/tests/units/observability/: test_trace_id.py
src/asset_core/types/: __init__.py  common.py
src/crypto_single/: .env.example  README.md  __init__.py  main.py  pyproject.toml
src/crypto_single/api/: __init__.py
src/crypto_single/config/: __init__.py  api.py  database.py  dual_database.py  exchange.py  influxdb.py  redis.py  settings.py
src/crypto_single/crypto_single/api/: __init__.py
src/crypto_single/crypto_single/storage/: __init__.py
src/crypto_single/events/: __init__.py
src/crypto_single/providers/: __init__.py
src/crypto_single/security/: __init__.py
src/crypto_single/services/: __init__.py
src/crypto_single/storage/: __init__.py
src/crypto_single/tests/integration/: test_environment_config.py
src/crypto_single/tests/units/config/: test_database_config.py  test_exchange_config.py
src/crypto_single/workers/: __init__.py
src/person_chart/: __init__.py  colored_logging.py  config.py  data_models.py  enhanced_main.py  main.py
src/person_chart/analysis/: __init__.py  data_analyzer.py
src/person_chart/providers/: __init__.py  abstract_data_provider.py  binance_provider.py  crypto_provider.py  enhanced_crypto_provider.py
src/person_chart/services/: __init__.py  database_manager.py  kafka_manager.py
src/person_chart/storage/: subscription_repo.py
src/person_chart/tools/: influx-connector.py  time_unity.py
src/person_chart/utils/: time_unity.py
src_backup_20250629_1629/crypto_single/: __init__.py  main.py
src_backup_20250629_1629/crypto_single/config/: settings.py
src_backup_20250629_1629/crypto_single/workers/: __init__.py
tests/asset_core/: conftest.py
tests/asset_core/contracts/: __init__.py  base_contract_test.py  test_config_edge_cases.py  test_config_hierarchy.py  test_data_provider_contract.py  test_event_bus_contract.py  test_kline_repo_contract.py  test_metadata_repo_contract.py  test_observability_components.py  test_storage_advanced.py
tests/asset_core/e2e/: test_data_flow_integration.py  test_system_resilience.py
tests/asset_core/integration/: test_exceptions.py  test_exceptions_enhanced.py
tests/asset_core/integration/config/: test_base.py  (+1 more)
tests/asset_core/performance/: __init__.py  test_concurrency_performance.py  test_model_performance.py
tests/asset_core/security/: __init__.py  test_input_sanitization.py  test_sensitive_data_handling.py
tests/asset_core/units/: test_config.py  test_events.py  test_exceptions.py  test_exceptions_enhanced.py  test_models.py  test_models_comprehensive.py  test_providers.py  test_test_runner.py
tests/crypto_single/contracts/: test_multi_exchange_config.py
(+47 files in other folders)
