[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-core"
version = "0.1.1"
description = "Core library for asset trading data infrastructure"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TradingChart Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "mypy>=1.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-python-dateutil",
    "types-pytz",
    "hypothesis>=6.80.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_core*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "hypothesis>=6.135.16",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
]
